[project]
name = "obstacle-avoid"
version = "0.1.0"
description = "A Python package for obstacle avoidance in robotics."
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "numpy",
    "opencv-python",
    "requests",
    "teleimager",
    "uvicorn",
]

[tool.uv.sources]
teleimager = { path = "../teleimager" }